tests/show-variable.stderr
error: 
   ┌─ test:4:1
   │
 4 │ show my-variable
   │ ^^^^
   │ │
   │ cannot display `my-variable` on the screen
   │ could not find instance `Show Cannot-Be-Shown`
   │
   ┌─ <dir>/std/io.wpl:25:26
   │
25 │ show :: (A : Text) where (Show A) => A -> ()
   │                          -------- required by this bound
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/missing-instance

